--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+universal-ctags (0+SNAPSHOT20180225-1ubuntu1ppa1~ubuntu18.04.1) bionic; urgency=medium
+
+  * Add build dependencies
+  * Install manpages
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Thu, 07 Jun 2018 11:41:57 +0900
+
 universal-ctags (0+git20180225-1) unstable; urgency=medium
 
   * Initial release (Closes: #797359)
