--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+universal-ctags (0+SNAPSHOT20180606-1ubuntu1ppa2~ubuntu18.04.1) bionic; urgency=medium
+
+  * Show diff output when test fails
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Thu, 07 Jun 2018 22:08:25 +0900
+
 universal-ctags (0+SNAPSHOT20180606-1ubuntu1ppa1~ubuntu18.04.1) bionic; urgency=medium
 
   * New upstream version 0+SNAPSHOT20180606
